# sfml-pong

./: .gitignore  Ball.cpp  Ball.h  CMakeLists.txt  Game.cpp  Game.h  IAnimatable.h  ICollideable.h  IDrawable.h  IMovable.h  IMoveable.h  Paddle.cpp  Paddle.h  README.md  Wall.cpp  Wall.h  main.cpp
src/: Ball.cpp  Ball.h  Game.cpp  Game.h  IAnimatable.h  ICollideable.h  IDrawable.h  IUpdatable.h  Paddle.cpp  Paddle.h  Score.cpp  Score.h  Wall.cpp  Wall.h
uml/: class-model.puml
